<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ewellix_examples</name>
  <version>0.0.0</version>
  <description>Clearpath's scripts package for Ewellix TLT lifting columns</description>

  <author email="lcamero@clearpathrobotics.com">Luis Camero</author>
  <maintainer email="lcamero@clearpathrobotics.com">Luis Camero</maintainer>

  <license>BSD</license>

  <exec_depend>ewellix_interfaces</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
